tests/integration/typecheck/pass/dynamic_type_error_without_wildcard.ncl
# test.type = 'pass'
# eval = 'typecheck'
let head = fun l => (%elem_at% l 0)
in head 10
