tests/integration/typecheck/fail/shallow_type_inference.ncl
# test.type = 'error'
# eval = 'typecheck'
# 
# [test.metadata]
# error = 'TypecheckError::TypeMismatch'
#
# [test.metadata.expectation]
# expected = 'Number'
# found = 'Dyn'
let x = (1 + 1) in (x + 1 : Number)